--- a/alyeska/alaska_region_settings.json
+++ b/alyeska/alaska_region_settings.json
@@ -81,8 +81,8 @@
     },
     "river_scale": 1.0,
     "overmap_lake_settings": {
-      "noise_threshold_lake": 0.22,
-      "lake_size_min": 15,
+      "noise_threshold_lake": 0.25,
+      "lake_size_min": 10,
       "lake_depth": -5,
       "shore_extendable_overmap_terrain": [ "forest", "forest_thick", "forest_water", "field" ],
       "shore_extendable_overmap_terrain_aliases": [
@@ -93,7 +93,7 @@
       ]
     },
     "overmap_ocean_settings": {
-      "noise_threshold_ocean": 0.04,
+      "noise_threshold_ocean": 0.05,
       "ocean_size_min": 100,
       "ocean_depth": -9,
       "ocean_start_north": 1,
@@ -460,9 +460,9 @@
       "shop_sigma": 50,
       "park_radius": 20,
       "park_sigma": 80,
-      "houses": { "bungalow01": 50, "bungalow02": 50, "bungalow03": 50, "fishing_pond_city": 10 },
-      "parks": { "park": 50, "park_2": 50, "park_3": 50, "park_4": 50, "park_5": 50, "park_6": 50, "park_7": 50 },
-      "shops": { "cs_market_small": 100, "cs_sex_shop": 100 }
+      "houses": { "bungalow01": 50 },
+      "parks": { "park": 50 },
+      "shops": { "cs_market_small": 100 }
     },
     "//": "Climate data sauced from https://www.climatestotravel.com/climate/united-states/unalaska#google_vignette",
     "weather": {
