--- a/alyeska/alaska_region_settings.json
+++ b/alyeska/alaska_region_settings.json
@@ -113,7 +113,7 @@
     },
     "forest_mapgen_settings": {
       "forest": {
-        "terrains": [ "forest", "special_forest" ],
+        "terrains": [ "forest" ],
         "sparseness_adjacency_factor": 3,
         "item_group": "forest",
         "item_group_chance": 60,
@@ -147,42 +147,6 @@
       "forest_thick": {
         "terrains": [
           "forest_thick",
-          "forest_trail_isolated",
-          "forest_trail_end_north",
-          "forest_trail_end_east",
-          "forest_trail_end_south",
-          "forest_trail_end_west",
-          "forest_trail_ns",
-          "forest_trail_ew",
-          "forest_trail_ne",
-          "forest_trail_es",
-          "forest_trail_sw",
-          "forest_trail_wn",
-          "forest_trail_new",
-          "forest_trail_nsw",
-          "forest_trail_esw",
-          "forest_trail_nes",
-          "forest_trail_nesw",
-          "campsite_north",
-          "campsite_south",
-          "campsite_east",
-          "campsite_west",
-          "campsite_cabin_incomplete_north",
-          "campsite_cabin_incomplete_south",
-          "campsite_cabin_incomplete_east",
-          "campsite_cabin_incomplete_west",
-          "campsite_field_biker_north",
-          "campsite_field_biker_south",
-          "campsite_field_biker_east",
-          "campsite_field_biker_west",
-          "campsite_field_biker_destroyed_north",
-          "campsite_field_biker_destroyed_south",
-          "campsite_field_biker_destroyed_east",
-          "campsite_field_biker_destroyed_west",
-          "campsite_a_north",
-          "campsite_a_south",
-          "campsite_a_east",
-          "campsite_a_west",
           "desolatebarn_north",
           "desolatebarn_south",
           "desolatebarn_east",
@@ -191,10 +155,6 @@
           "derelict_property_south",
           "derelict_property_east",
           "derelict_property_west",
-          "homelesscamp_north",
-          "homelesscamp_south",
-          "homelesscamp_east",
-          "homelesscamp_west",
           "natural_spring_north",
           "natural_spring_south",
           "natural_spring_east",
@@ -280,15 +240,7 @@
           "hunter_shack_1_north",
           "hunter_shack_1_south",
           "hunter_shack_1_east",
-          "hunter_shack_1_west",
-          "shipwreck_river_1_north",
-          "shipwreck_river_1_south",
-          "shipwreck_river_1_east",
-          "shipwreck_river_1_west",
-          "shipwreck_river_2_north",
-          "shipwreck_river_2_south",
-          "shipwreck_river_2_east",
-          "shipwreck_river_2_west"
+          "hunter_shack_1_west"
         ],
         "sparseness_adjacency_factor": 2,
         "item_group": "forest",
@@ -302,34 +254,7 @@
             "sequence": 0,
             "chance": 45,
             "clear_types": false,
-            "types": {
-              "t_tree": 40,
-              "t_tree_young": 80,
-              "t_tree_pine": 40,
-              "t_tree_birch": 20,
-              "t_tree_elm": 20,
-              "t_tree_cottonwood": 20,
-              "t_tree_alder": 80,
-              "t_tree_maple": 40,
-              "t_tree_willow": 40,
-              "t_tree_walnut": 8,
-              "t_tree_butternut": 8,
-              "t_tree_chestnut": 8,
-              "t_tree_hazelnut": 2,
-              "t_tree_beech": 2,
-              "t_tree_hickory": 8,
-              "t_tree_crabapple": 2,
-              "t_tree_apple": 1,
-              "t_tree_cherry": 1,
-              "t_tree_juniper": 2,
-              "t_tree_peach": 1,
-              "t_tree_pear": 1,
-              "t_tree_plum": 1,
-              "t_tree_elderberry": 2,
-              "t_tree_mulberry": 2,
-              "t_tree_sassafras": 3,
-              "t_region_tree_dead": 90
-            }
+            "types": { "t_tree_alder_green": 40, "t_tree_willow_arctic": 80, "t_region_tree_dead": 90 }
           },
           "shrubs_and_flowers": {
             "sequence": 1,
@@ -369,7 +294,6 @@
       "forest": {
         "chance": 40,
         "extras": {
-          "mx_blackberry_patch": 1000,
           "mx_point_dead_vegetation": 500,
           "mx_point_burned_ground": 500,
           "mx_grove": 500,
@@ -379,7 +303,6 @@
           "mx_pond_forest": 125,
           "mx_pond_forest_2": 125,
           "mx_clay_deposit": 125,
-          "mx_knotweed_patch": 120,
           "mx_grass2": 40,
           "mx_casings": 30,
           "mx_fallen_shed": 30,
@@ -390,7 +313,6 @@
       "forest_thick": {
         "chance": 30,
         "extras": {
-          "mx_blackberry_patch": 1300,
           "mx_grove": 500,
           "mx_shrubbery": 500,
           "mx_point_dead_vegetation": 500,
@@ -400,7 +322,6 @@
           "mx_pond_forest": 125,
           "mx_pond_forest_2": 125,
           "mx_clay_deposit": 125,
-          "mx_knotweed_patch": 100,
           "mx_casings": 30,
           "mx_grass2": 20,
           "mx_fallen_shed": 20,
@@ -415,7 +336,6 @@
           "mx_pond_swamp": 240,
           "mx_pond_swamp_2": 240,
           "mx_clay_deposit": 140,
-          "mx_knotweed_patch": 140,
           "mx_point_dead_vegetation": 60,
           "mx_fallen_shed": 10,
           "mx_casings": 60,
@@ -433,7 +353,6 @@
           "mx_point_burned_ground": 500,
           "mx_point_dead_vegetation": 500,
           "mx_trees": 500,
-          "mx_knotweed_patch": 250,
           "mx_fallen_shed": 200,
           "mx_sand_patch": 200,
           "mx_casings": 200,
