--- a/alyeska/alaska_region_settings.json
+++ b/alyeska/alaska_region_settings.json
@@ -39,7 +39,6 @@
           "t_underbrush": 25,
           "t_shrub": 6,
           "t_shrub_blueberry": 2,
-          "t_shrub_raspberry": 2,
           "t_shrub_strawberry": 1,
           "t_fern_lady": 3,
           "t_shrub_rhododendron": 6
@@ -48,10 +47,10 @@
         "t_region_shrub_plains": { "t_shrub": 6, "t_shrub_blueberry": 3, "t_shrub_strawberry": 1, "t_shrub_rhododendron": 6 },
         "t_region_shrub_swamp": { "t_fern_lady": 2, "t_shrub_blueberry": 2 },
         "t_region_shrub_fruit": { "t_shrub_blueberry": 6, "t_shrub_strawberry": 6 },
-        "t_region_shrub_decorative": { "t_shrub": 30, "t_fern_lady": 5 },
+        "t_region_shrub_decorative": { "t_shrub": 30, "t_fern_lady": 5, "t_shrub_rhododendron": 10 },
         "t_region_shrub": { "t_region_shrub_decorative": 60, "t_underbrush": 10, "t_region_shrub_fruit": 30 },
         "t_region_tree_forest_dense": { "t_tree_alder_green": 5, "t_region_tree_forest_other": 5 },
-        "t_region_tree_forest_other": { "t_tree_willow_arctic": 15, "t_tree_alder_green": 15 },
+        "t_region_tree_forest_other": { "t_tree_willow_arctic": 15, "t_tree_alder_green": 8 },
         "t_region_tree_forest": { "t_region_tree_forest_dense": 2, "t_region_tree_forest_other": 1 },
         "t_region_tree": { "t_tree_alder_green": 12, "t_tree_willow_arctic": 32, "t_region_tree_dead": 48 },
         "t_region_tree_shade": { "t_tree_alder_green": 16, "t_tree_willow_arctic": 32, "t_tree_dead": 2 },
