--- a/alyeska/alaska_region_settings.json
+++ b/alyeska/alaska_region_settings.json
@@ -145,54 +145,27 @@
       },
       "forest_thick": {
         "terrains": [
-          "forest_thick",
-          "desolatebarn_north",
-          "desolatebarn_south",
-          "desolatebarn_east",
-          "desolatebarn_west",
-          "derelict_property_north",
-          "derelict_property_south",
-          "derelict_property_east",
-          "derelict_property_west",
-          "natural_spring_north",
-          "natural_spring_south",
-          "natural_spring_east",
-          "natural_spring_west",
           "cave",
-          "island_forest_north",
-          "island_forest_east",
-          "island_forest_south",
-          "island_forest_west",
-          "island_forest_thick_north",
-          "island_forest_thick_east",
-          "island_forest_thick_south",
-          "island_forest_thick_west",
+          "derelict_property",
+          "desolatebarn",
+          "forest_thick",
+          "island_forest",
+          "island_forest_thick",
           "lake_shore",
-          "river_center",
-          "river_north",
-          "river_east",
-          "river_south",
-          "river_west",
-          "river_ne",
-          "river_se",
-          "river_sw",
-          "river_nw",
+          "natural_spring",
+          "river",
           "river_c_not_ne",
+          "river_c_not_nw",
           "river_c_not_se",
           "river_c_not_sw",
-          "river_c_not_nw",
-          "stream_north",
-          "stream_east",
-          "stream_south",
-          "stream_west",
-          "stream_corner_north",
-          "stream_corner_east",
-          "stream_corner_south",
-          "stream_corner_west",
-          "stream_end_north",
-          "stream_end_east",
-          "stream_end_south",
-          "stream_end_west"
+          "river_center",
+          "river_ne",
+          "river_nw",
+          "river_se",
+          "river_sw",
+          "stream",
+          "stream_corner",
+          "stream_end"
         ],
         "sparseness_adjacency_factor": 4,
         "item_group": "forest",
@@ -230,17 +203,7 @@
         "terrain_furniture": {  }
       },
       "forest_water": {
-        "terrains": [
-          "forest_water",
-          "hunter_shack_north",
-          "hunter_shack_south",
-          "hunter_shack_east",
-          "hunter_shack_west",
-          "hunter_shack_1_north",
-          "hunter_shack_1_south",
-          "hunter_shack_1_east",
-          "hunter_shack_1_west"
-        ],
+        "terrains": [ "forest_water", "hunter_shack", "hunter_shack_1" ],
         "sparseness_adjacency_factor": 2,
         "item_group": "forest",
         "item_group_chance": 60,
