--- a/alyeska/alaska_region_settings.json
+++ b/alyeska/alaska_region_settings.json
@@ -337,13 +337,14 @@
       "agricultural": { "chance": 38, "extras": { "mx_point_burned_ground": 500, "mx_point_dead_vegetation": 500, "mx_casings": 200 } }
     },
     "city": {
-      "shop_radius": 30,
+      "type": "town",
+      "shop_radius": 60,
       "shop_sigma": 50,
-      "park_radius": 20,
+      "park_radius": 40,
       "park_sigma": 80,
-      "houses": { "cottage01_normal": 50 },
+      "houses": { "cottage01_normal": 50, "cottage01_abandoned": 150 },
       "parks": { "park": 50 },
-      "shops": { "general_store01_normal": 100 }
+      "shops": { "general_store01_normal": 20 }
     },
     "//": "Climate data sauced from https://www.climatestotravel.com/climate/united-states/unalaska#google_vignette",
     "weather": {
