--- a/alyeska/alaska_region_settings.json
+++ b/alyeska/alaska_region_settings.json
@@ -148,8 +148,6 @@
           "cave",
           "derelict_property",
           "desolatebarn",
-          "forest_trail",
-          "forest_trail_intersection",
           "forest_thick",
           "island_forest",
           "island_forest_thick",
@@ -356,6 +354,6 @@
       "base_wind_distrib_peaks": 80,
       "base_wind_season_variation": 50
     },
-    "overmap_feature_flag_settings": { "clear_blacklist": false, "blacklist": [  ], "clear_whitelist": false, "whitelist": [  ] }
+    "overmap_feature_flag_settings": { "clear_blacklist": false, "blacklist": [  ], "clear_whitelist": false, "whitelist": [ "ALYESKA" ] }
   }
 ]
